--- a/assets/ruso.html
+++ b/assets/ruso.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Mensajes Codificados</title>
-  <link rel="stylesheet" href="/encriptador/assets/css/ruso.css"/>
+  <link rel="stylesheet" href="css/ruso.css"/>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                 <p id="counter"> solo se permiten letras*</p>
                 <form>
                   <label for="claveSecreta">Clave secreta</label>
-                  <input id="claveSecreta" type="number" min="-100" max="100" placeholder="Clave" name="claveSecreta" step="1">solo letras*<br>
+                  <input id="claveSecreta" type="number" min="-100" max="100" placeholder="Clave" name="claveSecreta" step="1"><br>
                   <br>
                 </form>
                 
@@ -50,7 +50,7 @@
       </div>
     </section>
   </main>
-  <script src="/encriptador/assets/js/indexruso.js" type="module"></script>
+  <script src="js/indexruso.js" type="module"></script>
 </body>
 
 </html>
