--- a/assets/contraseña.html
+++ b/assets/contraseña.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Document</title>
+    <title>generatedPassword</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/encriptador/assets/css/contraseña.css">
+    <link rel="stylesheet" href="css/contraseña.css">
 </head>
 <body>
     <div class="contenedor">
@@ -37,6 +37,6 @@
             </div>
         </div>
     </div>
-    <script src="/encriptador/assets/js/contraseña.js"></script>
+    <script src="js/contraseña.js"></script>
 </body>
 </html>
