--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROYECTO ENCRIPTADOR +ChicasTec</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="/encriptador/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -38,8 +38,8 @@
                     de que entre amig@s puedas hablar en codigo.</p>
                 <br>
                 <picture class="imagenes-inicio">
-                    <img src="/encriptador/assets/img/imgencriptacion.png" alt="imagen encriptado" width="800px" class="right">
-                    <img src="/encriptador/assets/img/imgunicef.png" alt="imagen de +ChicasTec" width="607px" class="right">
+                    <img src="assets/img/imgencriptacion.png" alt="imagen encriptado" width="800px" class="right">
+                    <img src="assets/img/imgunicef.png" alt="imagen de +ChicasTec" width="607px" class="right">
                 </picture>
             </section>
         </div>
@@ -56,24 +56,24 @@
 
                 <div class="card">
                     <figure>
-                        <img src="/encriptador/assets/img/ruso.png" class="imagenes-card" alt="encriptador ruso">
+                        <img src="assets/img/ruso.png" class="imagenes-card" alt="encriptador ruso">
                     </figure>
                     <div class="contenido-card">
                         <h3>Encriptador Ruso</h3>
                         <p>Un encriptador clasico, de presentacion formal para tus mensajes secretos, puedes usarlo cuando quieras encriptar algo, y de la aprariencia de estar seria.</p>
-                        <a target="_blank" href="/encriptador/assets/html/ruso.html">Link directo</a>
+                        <a target="_blank" href="assets/ruso.html">Link directo</a>
                     </div>
                 </div>
 
                 <div class="card">
                     <figure>
-                        <img src="/encriptador/assets/img/contraseña.png" class="imagenes-card" alt="encriptador contraseña">
+                        <img src="assets/img/contraseña.png" class="imagenes-card" alt="encriptador contraseña">
                     </figure>
                     <div class="contenido-card">
                         <h3>Generarador de contraseñas</h3>
                         <p>¿Estas necesitando una constraseña segura? Usa el siguiente generador de constraseñas, y crea con facilidad un sin fin de posibles resultados que deseas obteber.
                         </p>
-                        <a target="_blank" href="/encriptador/assets/html/contraseña.html">Link directo</a>
+                        <a target="_blank" href="assets/contraseña.html">Link directo</a>
                     </div>
                 </div>
             </div>
@@ -91,14 +91,14 @@
                         <li><a href="https://www.proofpoint.com/es/threat-reference/encryption" class="lista">¿QUE SIGNIFICA ENCRIPTAR?</a>
                         <p class="parra-Ex">En criptografía, cifrar o encriptar es el proceso de codificar un mensaje o información de modo tal que solo los individuos autorizados sean capaces de acceder a esta, y aquellos que no estén autorizados no puedan hacerlo.</p>
                         <figure class="imagenes-informacionExtra">
-                            <img src="/encriptador/assets/img/cifradocesar.png" alt="imagen encriptado cesar" width="660px" class="imgW">
+                            <img src="assets/img/cifradocesar.png" alt="imagen encriptado cesar" width="660px" class="imgW">
                             <figcaption class="figcaption-imagenesIE">Cifrado Cesar</figcaption>
                         </figure>
                         
                         <li><a href="https://www.proofpoint.com/es/threat-reference/encryption" class="lista">TIPOS DE CIFRADO</a>
                         <p class="parra-Ex">Cifrado cesar, Cifrado con emojis, Cifrado con imagenes, Cifrado musical, entre otros.</p>
                         <figure class="imagenes-informacionExtra">
-                            <img src="/encriptador/assets/img/cifradoruso.jpg" alt="encriptador-emojis" width="700px" class="imgW">
+                            <img src="assets/img/cifradoruso.jpg" alt="encriptador-emojis" width="700px" class="imgW">
                             <figcaption class="imagenes-informacionExtra">Cifrado emojis</figcaption>
                         </figure>
                     </ul>   
@@ -114,7 +114,7 @@
                 <p class="p">+ChicasTec es un proyecto que parte de la iniciativa de UNICEF Skill 4 Girls y tiene como principal objetivo reducir la brecha digital de género en Perú.</p>
                 <br>
                 <picture class="imagenes-inicio">
-                    <img src="/encriptador/assets/img/tecgirls.png" alt="imagen animada del grupo" width="900px" class="right">
+                    <img src="assets/img/tecgirls.png" alt="imagen animada del grupo" width="900px" class="right">
                 </picture>
 
             </section>
@@ -131,7 +131,7 @@
 
         </div>
 
-        <script src="/ENCRIPTADOR +ChicasTec/assets/js/scriptIndex.js"></script>
+        <script src="assets/js/scriptIndex.js"></script>
 
 </body>
 </html>
